<resources>
    <string name="app_name">TalkToMe</string>
    <string name="settings_button_content_description">Settings Button</string>
    <string name="add_caregiver_text">Pfleger hinzufügen</string>
    <string name="edit_caregiver_text">Pfleger bearbeiten</string>
    <string name="add">Hinzufügen</string>
    <string name="phone">Telefon</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="save">Speichern</string>
    <string name="add_ip_text">TV IP-Adresse hinzufügen</string>
    <string name="ip_address">IP-Adresse</string>
    <string name="automatic">Automatisch</string>
</resources>